embb-egress-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: embb-egress
  namespace: embb
spec:
  endpointSelector: {}  # Apply to all pods in the namespace
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
