mmtc-dns-only.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dns-only
  namespace: mmtc
spec:
  endpointSelector: {}  # Apply to all pods in the namespace
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns: []
  egressDeny:
    - {}  # Deny all other egress traffic
