urllc-block-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: block-external-egress
  namespace: urllc
spec:
  endpointSelector: {}  # Apply to all pods in the namespace
  egressDeny:
    - toEntities:
        - world
